--- a/preprod/Dockerfile
+++ b/preprod/Dockerfile
@@ -1,14 +1,14 @@
 # syntax=docker/dockerfile:1
 FROM inputoutput/cardano-node:latest
 
-RUN mkdir -p /data/preview
+RUN mkdir -p /data/preprod
 RUN mkdir -p /ipc
 
-COPY ./config.json /data/preview/config.json
-COPY ./topology.json /data/preview/topology.json
-COPY ./byron-genesis.json /data/preview/byron-genesis.json
-COPY ./shelley-genesis.json /data/preview/shelley-genesis.json
-COPY ./alonzo-genesis.json /data/preview/alonzo-genesis.json
+COPY ./config.json /data/preprod/config.json
+COPY ./topology.json /data/preprod/topology.json
+COPY ./byron-genesis.json /data/preprod/byron-genesis.json
+COPY ./shelley-genesis.json /data/preprod/shelley-genesis.json
+COPY ./alonzo-genesis.json /data/preprod/alonzo-genesis.json
 
 COPY ./entrypoint /usr/local/bin/entrypoint
 RUN chmod +x /usr/local/bin/entrypoint
